[workspace]
resolver = "2"
members = [
    "crates/liteparse-ruby",
    "ext/liteparse",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/emattiza/liteparse-rb"

[workspace.dependencies]
liteparse = { version = "2.1.1", default-features = false }
liteparse-pdfium = { version = "1.2.0" }
liteparse-pdfium-sys = { version = "1.2.0" }
magnus = { version = "0.8" }
rb-sys = { version = "0.9.128", default-features = false, features = ["stable-api-compiled-fallback"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png"] }