[package]
name = "liteparse-ruby"
version = "2.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ruby bindings for LiteParse"

[lib]
name = "liteparse"
crate-type = ["cdylib"]

[features]
default = ["tesseract"]
tesseract = ["liteparse/tesseract"]

[dependencies]
liteparse = { workspace = true, features = [] }
liteparse-pdfium = { workspace = true }
liteparse-pdfium-sys = { workspace = true }
magnus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }