[package]
name = "liteparse-ruby"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ruby bindings for LiteParse"

[lib]
name = "liteparse_ruby"
crate-type = ["lib"]

[features]
default = []
tesseract = ["liteparse/tesseract"]

[dependencies]
liteparse = { workspace = true, features = [] }
liteparse-pdfium = { workspace = true }
liteparse-pdfium-sys = { workspace = true }
magnus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }