[package]
name = "liteparse"
version = "0.1.14"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ruby extension for LiteParse"

[lib]
name = "liteparse"
crate-type = ["cdylib"]

[features]
default = ["tesseract"]
tesseract = ["liteparse-core/tesseract", "liteparse-ruby/tesseract"]

[dependencies]
liteparse-core = { package = "liteparse", version = "2.1.1", default-features = false }
liteparse-ruby = { package = "liteparse-ruby", path = "../../crates/liteparse-ruby" }
magnus = { workspace = true }
rb-sys = { workspace = true }